# ComfyUi_NNLatentUpscaleFlux

./: .gitignore  Makefile  README.md  comparison_workflow.json  latent_resizer.py  nn_upscale.py
training/: create_dataset.py  pyproject.toml
training/flux/: evaluation.py  latent_resizer_train.py
training/sd/: evaluation.py  latent_resizer_train.py
